plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
}

repositories {
    mavenLocal()
    maven {
        url = 'http://repo.maven.apache.org/maven2'
    }
}

dependencies {
    testCompile 'junit:junit:4.12'
}

group = 'branscha'
version = '2.0-SNAPSHOT'
description = 'Scripty Embeddable Scripting Language'
sourceCompatibility = '1.8'
mainClassName = 'branscha.scripty.ScriptyAutoRepl'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

// Start a Scripty repl with minimalistic GUI (if possible)
// It will fall back to the CLI if a GUI cannot be started.
// ./gradlew --console plain repl
task repl(type: JavaExec) {
    main = "branscha.scripty.ScriptyAutoRepl"
    classpath = sourceSets.main.runtimeClasspath
}

// Start a Scripty repl on the command line.
// ./gradlew --console plain textrepl
task textrepl(type: JavaExec) {
    main = "branscha.scripty.ScriptyAutoRepl"
    classpath = sourceSets.main.runtimeClasspath
    systemProperty 'mode', 'text'
    standardInput = System.in
    standardOutput = System.out
}
